add number button functionality

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div id="calculator">
             <div id="screen">
                 <div id="top-display">
-                    <div id="operation">+</div>
-                    <div id="stored">123</div>
+                    <div id="operation">  </div>
+                    <div id="stored"> </div>
                 </div>
-                <div id="display"></div>
+                <div id="display">1</div>
             </div>
             <div id="buttons-container">
                 <button class="button">1</button>
